<?xml version="1.0" encoding="utf-8" ?><!DOCTYPE resources [<!ENTITY app_name "ADivelog"><!ENTITY app_version "v1.6">]>
<resources>
    <string name="app_label">&app_name; &app_version;</string>
    <string name="pref_name">ADiveLogPref</string>
    <string name="Tab1">Stats</string>
    <string name="Tab2">Log</string>
    <string name="unit_kelvin">K</string>
    <string name="unit_degree_celsius">°C</string>
    <string name="unit_degree_fahrenheit">°F</string>
    <string name="unit_bar">bar</string>
    <string name="unit_cubic_feet">ft^3</string>
    <string name="unit_cubic_meter">m^3</string>
    <string name="unit_feet">ft</string>
    <string name="unit_liter">l</string>
    <string name="unit_meter">m</string>
    <string name="unit_minute">min</string>
    <string name="unit_pascal">Pa</string>
    <string name="unit_psi">psi</string>
    <string name="unit_second">s</string>
    <string name="unit_kilo">kg</string>
    <string name="unit_liter_per_minute">l/min</string>
    <string name="unit_cubic_meter_per_second">m^3/s</string>
    <string name="unit_cubic_meter_per_minute">m^3/min</string>
    <string name="unit_meter_per_second">m/s</string>
    <string name="unit_meter_per_minute">m/min</string>
    <string name="air">Air</string>
    <string name="oxygen">Oxygen</string>
    <string name="title_activity_detail">Dive Details</string>
    <string name="Empty_Cell">n/a</string>
    <string name="number_of_dives">Number of Dives:</string>
    <string name="last_dive">Last dive:</string>
    <string name="first_dive">First dive:</string>
    <string name="dives_per_year">Avg. dives per year:</string>
    <string name="total_divetime">Total divetime:</string>
    <string name="deepest_dive">Deepest Dive:</string>
    <string name="avg_depth">Avg. Depth:</string>
    <string name="longest_dive">Longest Dive:</string>
    <string name="coldest_dive">Coldest Dive:</string>
    <string name="warmest_dive">Warmest Dive:</string>
    <string name="avg_temperature">Avg. Temperature:</string>
    <string name="dive_no">Dive#:</string>
    <string name="dive_data">Dive Data</string>
    <string name="date">Date:</string>
    <string name="time_in">Time In:</string>
    <string name="divetime">Divetime:</string>
    <string name="depth">Depth:</string>
    <string name="air_temperature">Air Temperature:</string>
    <string name="water_temperature">Water Temperature:</string>
    <string name="dive_site">Dive Site</string>
    <string name="spot">Spot:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="country">Country:</string>
    <string name="buddy">Buddy:</string>
    <string name="avg_dive_time">Avg. Dive Time:</string>
    <string name="equipment">Equipment</string>
    <string name="dive_suit">Dive Suit:</string>
    <string name="gloves">Gloves:</string>
    <string name="weights">Weights:</string>
    <string name="tanks">Tanks</string>
    <string name="type">Type</string>
    <string name="volume">Volume</string>
    <string name="press_in">Press. In</string>
    <string name="press_out">Press. Out</string>
    <string name="comment">Comment</string>
    <string name="tank_gas_mix">(O2/N/He)%</string>
    <string name="eqm_button">Equipment</string>
    <string name="map_button">Map</string>
    <string name="chart_button">Charts</string>
    <string name="boat_dives">Boat/Shore dives:</string>
    <string name="sea_dives">Sea dives:</string>
</resources>