<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:paddingTop="10dp"
    tools:context=".StatsFragment">
    <TableRow>
        <TextView
            android:text="@string/number_of_dives"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
        <TextView
            android:id="@+id/tvNumOfDives"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/last_dive"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
        <TextView
            android:id="@+id/tvLastDive"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/first_dive"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
        <TextView
            android:id="@+id/tvFirstDive"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/dives_per_year"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
        <TextView
            android:id="@+id/tvAvgDive"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/total_divetime"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
        <TextView
            android:id="@+id/tvTotalDiveTime"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/deepest_dive"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
        <TextView
            android:id="@+id/tvDeepestDive"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/avg_depth"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
        <TextView
            android:id="@+id/tvAvgDepth"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/longest_dive"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
        <TextView
            android:id="@+id/tvLongestDive"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/avg_dive_time"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
        <TextView
            android:id="@+id/tvAvgDiveTime"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/coldest_dive"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
        <TextView
            android:id="@+id/tvColdestDive"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/warmest_dive"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
        <TextView
            android:id="@+id/tvWarmestDive"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/avg_temperature"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
        <TextView
            android:id="@+id/tvAvgTemp"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/boat_dives"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
        <TextView
            android:id="@+id/tvBoatDives"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/sea_dives"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
        <TextView
            android:id="@+id/tvSeaDives"
            android:gravity="end"
            android:textSize="16sp"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            />
    </TableRow>

    <TableRow>
        <TextView/>
        <TextView
            android:gravity="end"
            />
    </TableRow>

    <TableRow>
        <TextView/>
        <TextView
            android:gravity="end"
            />
    </TableRow>

    <TableRow>
        <TextView/>
       <Button
            android:id="@+id/mapbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_span="1"
            android:onClick="onClickMap"
            android:text="@string/map_button"
            android:textColor="@android:color/black" />

    </TableRow>
</TableLayout>