<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dip"
    android:background="@drawable/mybackground2"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dive_no"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDiveNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="3dip"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="16sp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@drawable/border"
        android:padding="10dip">

    <TextView
        android:id="@+id/tvdiveequipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/equipment"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvSuitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvdiveequipment"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:padding="3dip"
        android:text="@string/dive_suit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvsuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvdiveequipment"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@id/tvSuitText"
        android:layout_toRightOf="@id/tvSuitText"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="end"
        android:padding="3dip"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvGlovesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvsuit"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:padding="3dip"
        android:text="@string/gloves"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvGloves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSuitText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@id/tvGlovesText"
        android:layout_toRightOf="@id/tvGlovesText"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="end"
        android:padding="3dip"
        android:textSize="16sp" />

        <TextView
            android:id="@+id/tvWeightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvGlovesText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:padding="3dip"
            android:text="@string/weights"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvWeights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvGlovesText"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/tvWeightText"
            android:layout_toRightOf="@id/tvWeightText"
            android:textColor="@android:color/primary_text_dark"
            android:gravity="end"
            android:padding="3dip"
            android:textSize="16sp" />
    </RelativeLayout>
    <TableLayout
        android:id="@+id/tbl_tanktable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:padding="10dip"
        android:layout_marginBottom="1dp">
        <TableRow
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">
            <TextView
                android:text="@string/tanks"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:padding="5dip"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="bold|italic"/>
        </TableRow>
        <TableRow
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">
            <TextView
                android:text="@string/type"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:padding="3dip"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="12sp"
                android:textStyle="italic"/>
            <TextView
                android:text="@string/volume"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="2"
                android:padding="3dip"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="12sp"
                android:textStyle="italic"/>
            <TextView
                android:text="@string/tank_gas_mix"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="3"
                android:padding="3dip"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="12sp"
                android:textStyle="italic"/>
            <TextView
                android:text="@string/press_in"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="4"
                android:padding="3dip"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="12sp"
                android:textStyle="italic"/>
            <TextView
                android:text="@string/press_out"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="5"
                android:padding="3dip"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="12sp"
                android:textStyle="italic"/>
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@drawable/border"
        android:padding="10dip">
        <TextView
            android:id="@+id/tvComment"
            android:text="@string/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:textStyle="bold|italic"/>
        <TextView
            android:id="@+id/tvCommentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_below="@id/tvComment"
            android:layout_alignLeft="@+id/tvComment"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/primary_text_dark"
            android:gravity="end"
            android:textSize="16sp"
            android:textStyle="bold|italic"/>

    </RelativeLayout>
</LinearLayout>